@@ -1,3 +1,8 @@
+2010-03-03  Tom Tromey  <tromey@redhat.com>
+
+	PR gdb/11345:
+	* gdb.base/printcmds.exp (test_printf): Add test.
+
 2010-02-18  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
 	* configure.ac: Add gdb.multi/Makefile to AC_OUTPUT.
